--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>국악상점</h1>
     <script src="main.js"></script>
 </body>
 </html>
