--- a/index.html
+++ b/index.html
@@ -3,11 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>국악상점</title>
+    <title>모두의 국악상점</title>
+    <meta name="viewport" content="width=1190">
+    <meta name="robots" content="index,nofollow">
+    <meta property="og:url" content="http://website.com">
+    <meta property="og:title" content="모두의 국악상점">
+    <meta property="og:image" content="미리보기 섬네일 이미지 주소">
+    <meta property="og:description" content="웹사이트를 소개글">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
+    <script>
+        (function(d) {
+            var config = {
+                kitId: 'whs1itl',
+                scriptTimeout: 3000,
+                async: true
+            },
+            h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
+        })(document);
+    </script>
 </head>
 <body>
-    <h1>국악상점</h1>
+    <header>
+        <img src="" alt="모두의 국악사전">
+        <img src="" alt="메뉴바">
+    </header>
+    <main>
+        <section>
+            <div>
+                <h3>국립국악원 국악사전 특별전시</h3>
+                <h1>국악상점에 오신 것을 환영합니다!</h1>
+            </div>
+            <div>
+                <h4>국악사점이란?</h4>
+                <p>
+                    2022년 우리 곁을 찾아온 〈국악사전〉은 우리 전통 음악과 춤에 대한 지식과 사람을 연결하는 열린 매체입니다. 오랜 세월, 국립국악원을 중심으로 축적된 방대한 지식에 학계의 연구 성과가 반영된 최신 정보를 가미해 정확도를 높였습니다. 
+                </p>
+                <p>
+                    나아가 지식에 생동감을 더해 줄 시청각 매체(글, 음원, 도판, 영상 등)를 가미해 한국 전통 악, 가, 무의 실체와 아름다움을 오감으로 전달합니다.
+                </p>
+            </div>
+        </section>
+        <section>
+
+        </section>
+    </main>
+    <footer>
+
+    </footer>
     <script src="main.js"></script>
 </body>
 </html>
