--- a/index.html
+++ b/index.html
@@ -24,31 +24,242 @@
 </head>
 <body>
     <header>
-        <img src="" alt="모두의 국악사전">
-        <img src="" alt="메뉴바">
+        <img src="/img/logo.svg" alt="모두의 국악사전">
+        <img id="menuBtn" src="/img/Menu_btn.svg" alt="메뉴바">
+        <img id="exitBtn" class="inactive" src="img/exit_btn.svg" alt="">
     </header>
     <main>
-        <section>
-            <div>
-                <h3>국립국악원 국악사전 특별전시</h3>
-                <h1>국악상점에 오신 것을 환영합니다!</h1>
+        <nav id="menu">
+            <ul>
+                <li><a href="index.html"><h5>국악상점 소개</h5></a></li>
+                <li><a href="section1.html"><h5>전시구역</h5></a></li>
+                <li><a href="headword.html"><h5>표제어 상점</h5></a></li>
+            </ul>
+        </nav>
+        <section class="titleSection">
+            <div class="mainTitle">
+                <div class="titleInner">
+                    <img class="titleImg" src="/img/title.svg" alt="">
+                    <div class="titleText">
+                        <h3>• 국립국악원 국악사전 특별전시 •</h3>
+                        <h1>국악상점에 오신 것을 환영합니다!</h1>
+                    </div>
+                    <img class="_logoImg" src="/img/_logo.svg" alt="">
+                    <div class="mainGraphic">
+                        <img src="/img/mainGraphic1.svg" alt="">
+                        <img src="/img/mainGraphic2.svg" alt="">
+                    </div>
+                    <div class="date">
+                        <h2>24.11.15 - 12.08</h2>
+                        <h2>영등포아트스퀘어</h2>
+                    </div>
+                    <div class="time">
+                        <h3>평일 10:30 - 19:00 <br> 주말 11:00 - 18:00</h3>
+                        <h3>휴무 없음</h3>
+                    </div>
+                </div>
             </div>
             <div>
-                <h4>국악사점이란?</h4>
+                <div class="subTitle">
+                    <img class="subTitleImg" src="img/subTitleAsset.svg" alt="">
+                    <h4 class="subTitleText">국악사점이란?</h4>
+                </div>
                 <p>
-                    2022년 우리 곁을 찾아온 〈국악사전〉은 우리 전통 음악과 춤에 대한 지식과 사람을 연결하는 열린 매체입니다. 오랜 세월, 국립국악원을 중심으로 축적된 방대한 지식에 학계의 연구 성과가 반영된 최신 정보를 가미해 정확도를 높였습니다. 
-                </p>
-                <p>
+                    2022년 우리 곁을 찾아온 <국악사전>은 우리 전통 음악과 춤에 대한 지식과 사람을 연결하는 열린 매체입니다. 오랜 세월, 국립국악원을 중심으로 축적된 방대한 지식에 학계의 연구 성과가 반영된 최신 정보를 가미해 정확도를 높였습니다. 
+                    <br><br>
                     나아가 지식에 생동감을 더해 줄 시청각 매체(글, 음원, 도판, 영상 등)를 가미해 한국 전통 악, 가, 무의 실체와 아름다움을 오감으로 전달합니다.
                 </p>
             </div>
+            <div>
+                <div class="subTitle">
+                    <img class="subTitleImg" src="img/subTitleAsset.svg" alt="">
+                    <h4 class="subTitleText">국악사점이란?</h4>
+                </div>
+                <p>
+                    2023년 사전 탈출을 감행했던 국악 표제어들이 2024년에는 세상에서 가장 신명 나는 상점을 엽니다. 2024 <국악사전> 국악사/이론편 오픈 기념 특별 전시 <골라봐요 당신의 국악, 모두의 국악상점>은 국악과 관련된 재미난 상상을 마음껏 펼치고 그를 현실로 구현해 보는 공간입니다. 
+                    <br><br>
+                    국악에 반한 MZ세대들이 주축이 되어 이제껏 발표된 국악 표제어 중 50가지를 엄선, 가상의 상점을 꾸몄음은 물론 실제 브랜드와 협업을 통해 우리 생활 속으로 침투해버린 매력적인 국악 용어들을 만나볼 수 있습니다. 
+                    <br><br> 
+                    지금까지 국악사전이 만들어온 발자취를 되짚으며 사전 제작에 얽힌 비하인드 스토리를 들어볼 수 있음은 물론 모두의 상상을 초월하는 놀라운 꿈과 비전까지 확인할 수 있다는 이번 전시! 영등포아트스퀘어에 활짝 열린 <모두의 국악상점>이 여러분의 취향을 저격할 50가지 표제어를 선물합니다.
+                </p>
+            </div>
+            
         </section>
-        <section>
-
+        <section class="introSection">
+            <div>
+                <div class="subTitle">
+                    <svg class="subTitleImg" xmlns="http://www.w3.org/2000/svg" width="206" height="42" viewBox="0 0 206 42" fill="none">
+                        <path d="M155.431 24.3695C152.375 17.7098 149.442 9.73343 146.631 3C117.333 7.40934 87.5434 7.42152 58.2426 3.03654C55.4381 9.772 52.5102 17.7504 49.4597 24.4128C45.1009 25.7862 40.6734 27.069 36.1805 28.2571C35.9546 29.8931 35.73 31.5291 35.5068 33.1658C79.6721 42.2964 125.232 42.2781 169.392 33.1103C169.065 31.4304 168.738 29.7511 168.411 28.0711C164.022 26.9263 159.694 25.6915 155.431 24.3695Z" fill="#EDE6DD" stroke="#2E80C3" stroke-width="3.81441" stroke-miterlimit="10"/>
+                        <path d="M202.88 32.2647C202.88 32.9083 203.401 33.43 204.045 33.43C204.689 33.43 205.21 32.9083 205.21 32.2647C205.21 31.6211 204.689 31.0994 204.045 31.0994C203.401 31.0994 202.88 31.6211 202.88 32.2647Z" fill="#2E80C3"/>
+                        <path d="M181.593 29.9568C181.593 31.9926 183.243 33.6456 185.281 33.6456C187.32 33.6456 188.97 31.9954 188.97 29.9568C188.97 27.9182 187.32 26.2681 185.281 26.2681C183.243 26.2681 181.593 27.9182 181.593 29.9568Z" fill="#2E80C3"/>
+                        <path d="M195.421 27.9187L192.241 31.0984L195.421 34.2781L198.6 31.0984L195.421 27.9187Z" fill="#2E80C3"/>
+                        <path d="M3.11987 32.2647C3.11987 32.9083 2.59818 33.43 1.95457 33.43C1.31096 33.43 0.789273 32.9083 0.789273 32.2647C0.789273 31.6211 1.31096 31.0994 1.95457 31.0994C2.59818 31.0994 3.11987 31.6211 3.11987 32.2647Z" fill="#2E80C3"/>
+                        <path d="M24.407 29.9568C24.407 31.9926 22.7568 33.6456 20.7183 33.6456C18.6797 33.6456 17.0296 31.9954 17.0296 29.9568C17.0296 27.9182 18.6797 26.2681 20.7183 26.2681C22.7568 26.2681 24.407 27.9182 24.407 29.9568Z" fill="#2E80C3"/>
+                        <path d="M10.5789 27.9187L13.7585 31.0984L10.5788 34.2781L7.39915 31.0984L10.5789 27.9187Z" fill="#2E80C3"/>
+                    </svg>
+                    <h4 class="subTitleText blue">섹션 소개</h4>
+                </div>
+                <ul class="sectionList">
+                    <li class="box blueBox">
+                        <div class="accordionBox">
+                            <h3 class="white">SECTION 1<br>
+                                국악극장: “감동의 휘모리”</h3>
+                            <button>
+                                <img src="img/arrow_btn.svg" alt="">
+                            </button>
+                        </div>
+                        <p class="white">
+                            관에서 의례 진행하는 아카이빙 사업과는 달리 <국악사전>은 국악의 살아 숨 쉬는 역사가 담긴 국악 용어들이 책이나 사전 속의 말이 아닌, 
+                            동시대에서도 살아 숨 쉬며 시민들과 함께 호흡하는 현장의 말로서 존재하고 기능하기를 바랐습니다. 
+                            이 다큐멘터리에는 <국악사전>이라는 도전을 시작한 연구원들의 열정과 국악 용어와 MZ세대의 만남을 주선한 크리에이터들의 패기가 담겨 있습니다. 
+                            <국악사전>에 담긴 대가들의 피, 땀, 눈물과 <국악사전>을 변화시킨 젊은 크리에이터들의 색다른 아이디어. 
+                            <국악사전>의 도전과 열정, 꿈 그리고 미래가 진진하게 펼쳐집니다.
+                        </p>
+                    </li>
+                    <li class="box greenBox"> 
+                        <div class="accordionBox">
+                            <h3 class="white">SECTION 2 <br>
+                                국악장터: “영감의 장끼타령”</h3>
+                            <button>
+                                <img src="img/arrow_btn.svg" alt="">
+                            </button>
+                        </div>
+                        <p class="white">
+                            멈출 수 없는 스피드로 몰아가는 자진모리 축구화부터, 주거니 받거니 하고 싶은 달콤한 맛, 들강달강 밤 티라미수까지.
+                            국악 용어의 가능성을 실험하기 위해 MZ들이 사장으로 나섰습니다.
+                            30인의 젊은 디자이너들이 “국악 표제어가 우리 삶 곳곳에 스며들면 어떤 모습일까?”
+                            질문을 던지고 각기 다른 해답을 찾아 여러분을 위한 국악장터를 오픈했다고 하는데요.
+                            당대에는 불가능해 보였던 꿈을 특유의 긍정적인 에너지로 실현했던 장끼타령의 까투리같이,
+                            표제어에 대한 깊이 있는 이해를 바탕으로 재치 있는 아이디어를 펼치는 MZ들의 국악장터에서 표제어 쇼핑을 즐겨보세요.
+                        </p>
+                    </li>
+                    <li class="box redBox">
+                        <div class="accordionBox">
+                            <h3 class="white">SECTION 3<br>
+                                국악상점: “더늠의 시작”</h3>
+                            <button>
+                                <img src="img/arrow_btn.svg" alt="">
+                            </button>
+                        </div>
+                        <p class="white">
+                            <모두의 국악상점>을 아이디어 차원에서만 즐기기엔 어쩐지 아쉬운 여러분을 위해 진짜배기들이 기다리는 공간을 마련했습니다.
+                            ‘더늠'이란 판소리 창자가 만들어 낸 개성 넘치는 독보적 스타일을 의미하는데요.
+                            더늠에 어울리는 독보적 스타일의 브랜드를 초대해 국악 아우름터를 조성했습니다.
+                            국악 표제어와 커피, 막걸리, 아트 갤러리, 매거진, 크리에이티브 크루, 댄서의 만남!
+                            국악 아우름터에서는 개성 강한 브랜드와 국악 표제어의 만남을 통해 우리 삶의 일부가 된 <국악사전>을 체험할 수 있습니다.
+                            즐거운 체험 프로그램과 고퀄리티 굿즈로 내 삶 속의 국악을 완성해보세요.
+                        </p>
+                    </li>
+                    <a href="section1.html">
+                    <li class="box blackBox detail">
+                            <h6 class="white">
+                                자세히 알아보기
+                            </h6>
+                    </li>
+                    </a>
+                </ul>
+            </div>
+        </section>
+        <section class="weekSection">
+            <div>
+                <div class="subTitle">
+                    <svg class="subTitleImg" xmlns="http://www.w3.org/2000/svg" width="206" height="42" viewBox="0 0 206 42" fill="none">
+                        <path d="M155.431 24.3695C152.375 17.7098 149.442 9.73343 146.631 3C117.333 7.40934 87.5434 7.42152 58.2426 3.03654C55.4381 9.772 52.5102 17.7504 49.4597 24.4128C45.1009 25.7862 40.6734 27.069 36.1805 28.2571C35.9546 29.8931 35.73 31.5291 35.5068 33.1658C79.6721 42.2964 125.232 42.2781 169.392 33.1103C169.065 31.4304 168.738 29.7511 168.411 28.0711C164.022 26.9263 159.694 25.6915 155.431 24.3695Z" fill="#EDE6DD" stroke="#03A54B" stroke-width="3.81441" stroke-miterlimit="10"/>
+                        <path d="M202.88 32.2649C202.88 32.9086 203.401 33.4302 204.045 33.4302C204.689 33.4302 205.21 32.9086 205.21 32.2649C205.21 31.6213 204.689 31.0996 204.045 31.0996C203.401 31.0996 202.88 31.6213 202.88 32.2649Z" fill="#03A54B"/>
+                        <path d="M181.593 29.9568C181.593 31.9926 183.243 33.6456 185.281 33.6456C187.32 33.6456 188.97 31.9954 188.97 29.9568C188.97 27.9182 187.32 26.2681 185.281 26.2681C183.243 26.2681 181.593 27.9182 181.593 29.9568Z" fill="#03A54B"/>
+                        <path d="M195.421 27.9189L192.241 31.0986L195.421 34.2784L198.6 31.0986L195.421 27.9189Z" fill="#03A54B"/>
+                        <path d="M3.11987 32.2649C3.11987 32.9086 2.59818 33.4302 1.95457 33.4302C1.31096 33.4302 0.789273 32.9086 0.789273 32.2649C0.789273 31.6213 1.31096 31.0996 1.95457 31.0996C2.59818 31.0996 3.11987 31.6213 3.11987 32.2649Z" fill="#03A54B"/>
+                        <path d="M24.407 29.9568C24.407 31.9926 22.7568 33.6456 20.7183 33.6456C18.6797 33.6456 17.0296 31.9954 17.0296 29.9568C17.0296 27.9182 18.6797 26.2681 20.7183 26.2681C22.7568 26.2681 24.407 27.9182 24.407 29.9568Z" fill="#03A54B"/>
+                        <path d="M10.5789 27.9189L13.7585 31.0986L10.5788 34.2784L7.39915 31.0986L10.5789 27.9189Z" fill="#03A54B"/>
+                    </svg>
+                    <h4 class="subTitleText green">주말프로그램</h4>
+                </div>
+                <table id="timeTable">
+                    <tr>
+                        <th class="greenBox" scope="col"><h6>11/16(토)</h6></th>
+                        <th scope="col"><h6>11/23(토)</h6></th>
+                        <th scope="col"><h6>11/30(토)</h6></th>
+                        <th scope="col"><h6>12/07(토)</h6></th>
+                    </tr>
+                    <tr id="workshop1">
+                        <td>
+                            <p>
+                                13:00 - 16:00 <br> 스퀘어T 안쪽 회의실
+                            </p>
+                        </td>
+                        <td colspan="3">
+                            <h6>
+                                이제 국꾸가 대세! <br>
+                                만지작만지작 국악 굿즈 워크숍 1
+                            </h6>
+                            <p>
+                                나만의 단소 만들기 클래스 <br>
+                                신기한 전통 악기 단소를 직접 만들고 소리까지 내보는 특별한 시간!
+                            </p>
+                        </td>
+                    </tr>
+                    <tr id="workshop2" class="inactive">
+                        <td>
+                            <p>
+                                14:00 - 15:00 <br> 스퀘어T 안쪽 회의실 앞
+                            </p>
+                        </td>
+                        <td colspan="3">
+                            <h6>
+                                이제 국꾸가 대세! <br>
+                                만지작만지작 국악 굿즈 워크숍 2
+                            </h6>
+                            <p>
+                                <국악사전>을 활용한 나만의 엽서 만들기 <br>
+                                <국악사전>을 통해 표제어의 뜻, 맛있게 음미하고 멋지게 표현하고!
+                            </p>
+                        </td>
+                    </tr>
+                    <tr id="stateExam">
+                        <td>
+                            <p>
+                                14:00 - 15:00 <br> 스퀘어T 안쪽 회의실 앞
+                            </p>
+                        </td>
+                        <td colspan="3">
+                            <h6>
+                                국악 장원을 찾아라! <br>
+                                대국민 국악사전 과거시험
+                            </h6>
+                            <p>
+                                <국악사전>을 활용한 대국민 퀴즈대회 <br>
+                                <국악사전> 활용해 퀴즈 풀고, 상품 받고!
+                            </p>
+                        </td>
+                    </tr>
+                </table>
+            </div>
         </section>
     </main>
     <footer>
-
+        <nav>
+            <a href="https://www.gugak.go.kr/site/main/index001" target="_blank">
+                <img src="img/gugakLogo.svg" alt="국립국악원">
+            </a>
+            <a href="https://www.gugak.go.kr/ency/" target="_blank">
+                <img src="img/gugakDictionaryLogo.svg" alt="국악사전">
+            </a>
+        </nav>
+        <hr>
+        <nav>
+            <a href="https://typographyseoul.com/home/" target="_blank">
+                <img src="img/ttSeoulLogo.svg" alt="tt.서울">
+            </a>
+            <a href="https://ddungsang.com/" target="_blank">
+                <img src="img/ddungsangLogo.svg" alt="엉뚱상상">
+            </a>
+            <a href="https://typographyseoul.com/home/" target="_blank">
+                <img src="img/typographySeoulLogo.svg" alt="Typography Seoul">
+            </a>
+        </nav>
+        <div class="copyright">
+            <p>Copyright©국립국악원. all right reserved</p>
+        </div>
     </footer>
     <script src="main.js"></script>
 </body>
