--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
 </head>
 <body>
     <header>
-        <img src="/img/logo.svg" alt="모두의 국악사전">
-        <img id="menuBtn" src="/img/Menu_btn.svg" alt="메뉴바">
+        <img src="img/logo.svg" alt="모두의 국악사전">
+        <img id="menuBtn" src="img/Menu_btn.svg" alt="메뉴바">
         <img id="exitBtn" class="inactive" src="img/exit_btn.svg" alt="">
     </header>
     <main>
@@ -39,15 +39,15 @@
         <section class="titleSection">
             <div class="mainTitle">
                 <div class="titleInner">
-                    <img class="titleImg" src="/img/title.svg" alt="">
+                    <img class="titleImg" src="img/title.svg" alt="">
                     <div class="titleText">
                         <h3>• 국립국악원 국악사전 특별전시 •</h3>
                         <h1>국악상점에 오신 것을 환영합니다!</h1>
                     </div>
-                    <img class="_logoImg" src="/img/_logo.svg" alt="">
+                    <img class="_logoImg" src="img/_logo.svg" alt="">
                     <div class="mainGraphic">
-                        <img src="/img/mainGraphic1.svg" alt="">
-                        <img src="/img/mainGraphic2.svg" alt="">
+                        <img src="img/mainGraphic1.svg" alt="">
+                        <img src="img/mainGraphic2.svg" alt="">
                     </div>
                     <div class="date">
                         <h2>24.11.15 - 12.08</h2>
