--- a/section1.html
+++ b/section1.html
@@ -24,8 +24,8 @@
 </head>
 <body>
     <header>
-        <img src="/img/logo.svg" alt="모두의 국악사전">
-        <img id="menuBtn" src="/img/Menu_btn.svg" alt="메뉴바">
+        <img src="img/logo.svg" alt="모두의 국악사전">
+        <img id="menuBtn" src="img/Menu_btn.svg" alt="메뉴바">
         <img id="exitBtn" class="inactive" src="img/exit_btn.svg" alt="">
     </header>
     <main>
