--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 </head>
 <body>
     <header>
+        <a href="index.html">
         <img src="img/logo.svg" alt="모두의 국악사전">
+        </a>
         <img id="menuBtn" src="img/Menu_btn.svg" alt="메뉴바">
         <img id="exitBtn" class="inactive" src="img/exit_btn.svg" alt="">
     </header>
