--- a/headword.html
+++ b/headword.html
@@ -8,13 +8,13 @@
     <meta property="og:url" content="http://website.com">
     <meta property="og:title" content="모두의 국악상점">
     <meta property="og:image" content="미리보기 섬네일 이미지 주소">
-    <meta property="og:description" content="웹사이트를 소개글">
-    <link rel="stylesheet" href="style.css">
+    <meta property="og:description" content="표제어 상점">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
     <script>
         (function(d) {
             var config = {
-                kitId: 'whs1itl',
+                kitId: 'xoh7uvb',
                 scriptTimeout: 3000,
                 async: true
             },
@@ -25,23 +25,23 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="img/logo.svg" alt="모두의 국악사전">
+            <img src="./img/logo.svg" alt="모두의 국악사전">
         </a>
-        <img id="menuBtn" src="img/Menu_btn.svg" alt="메뉴바">
-        <img id="exitBtn" class="inactive" src="img/exit_btn.svg" alt="">
+        <img id="menuBtn" src="./img/Menu_btn.svg" alt="메뉴바">
+        <img id="exitBtn" class="inactive" src="./img/exit_btn.svg" alt="">
     </header>
     <main>
         <nav id="menu">
-            <ul>
-                <li><a href="index.html"><h5>국악상점 소개</h5></a></li>
-                <li><a href="section1.html"><h5>전시구역</h5></a></li>
-                <li><a href="headword.html"><h5>표제어 상점</h5></a></li>
-            </ul>
+            <ol>
+                <li><a href="./index.html"><h5>국악상점 소개</h5></a></li>
+                <li><a href="./section1.html"><h5>전시구역</h5></a></li>
+                <li><a href="./headword.html"><h5>표제어 상점</h5></a></li>
+            </ol>
         </nav>
         <section>
             <div>
                 <div class="subTitle">
-                    <img class="subTitleImg" src="img/subTitleAsset.svg" alt="">
+                    <img class="subTitleImg" src="./img/subTitleAsset.svg" alt="">
                     <h4 class="subTitleText">표제어란?</h4>
                 </div>
                 <p>
@@ -50,33 +50,98 @@
                     기획, 제작, 운영하는 온라인 백과사전입니다.
                 </p>
             </div>
+            <ul class="headwordList">
+                <li> <!--1-->
+                    <a href="./headword/월월이청청.html">
+                        <h2>[월월이청청]<br>김민정</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+                <li><!--2-->
+                    <a href="./headword/금다래꿍.html">
+                        <h2>[금다래꿍]<br>이채영</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+                <li><!--3-->
+                    <a href="./headword/쑥대머리.html">
+                        <h2>[쑥대머리]<br>이희웅</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+                <li><!--4-->
+                    <a href="./headword/활방구.html">
+                        <h2>[활방구]<br>임승주</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+                <li><!--5-->
+                    <a href="./headword/잉어걸음.html">
+                        <h2>잉어걸음,<br>양하진</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+                <li><!--6-->
+                    <a href="./headword/벙거지.html">
+                        <h2>벙거지,<br>원서연</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+                <li><!--7-->
+                    <a href="./headword/엇모리.html">
+                        <h2>엇모리,<br>장서현</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+                <li><!--8-->
+                    <a href="./headword/굿거리.html">
+                        <h2>굿거리,<br>이현정</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+                <li><!--9-->
+                    <a href="./headword/자진모리.html">
+                        <h2>자진모리,<br>도예나</h2>
+                        <article class="headword">
+                        </article>
+                    </a>
+                </li>
+            </ul>
         </section>
     </main>
     <footer>
         <nav>
             <a href="https://www.gugak.go.kr/site/main/index001" target="_blank">
-                <img src="img/gugakLogo.svg" alt="국립국악원">
+                <img src="./img/gugakLogo.svg" alt="국립국악원">
             </a>
             <a href="https://www.gugak.go.kr/ency/" target="_blank">
-                <img src="img/gugakDictionaryLogo.svg" alt="국악사전">
+                <img src="./img/gugakDictionaryLogo.svg" alt="국악사전">
             </a>
         </nav>
         <hr>
         <nav>
             <a href="https://typographyseoul.com/home/" target="_blank">
-                <img src="img/ttSeoulLogo.svg" alt="tt.서울">
+                <img src="./img/ttSeoulLogo.svg" alt="tt.서울">
             </a>
             <a href="https://ddungsang.com/" target="_blank">
-                <img src="img/ddungsangLogo.svg" alt="엉뚱상상">
+                <img src="./img/ddungsangLogo.svg" alt="엉뚱상상">
             </a>
             <a href="https://typographyseoul.com/home/" target="_blank">
-                <img src="img/typographySeoulLogo.svg" alt="Typography Seoul">
+                <img src="./img/typographySeoulLogo.svg" alt="Typography Seoul">
             </a>
         </nav>
         <div class="copyright">
             <p>Copyright©국립국악원. all right reserved</p>
         </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
