--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta property="og:url" content="http://website.com">
     <meta property="og:title" content="모두의 국악상점">
     <meta property="og:image" content="미리보기 섬네일 이미지 주소">
-    <meta property="og:description" content="웹사이트를 소개글">
-    <link rel="stylesheet" href="style.css">
+    <meta property="og:description" content="월월이청청">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
     <script>
         (function(d) {
             var config = {
-                kitId: 'whs1itl',
+                kitId: 'xoh7uvb',
                 scriptTimeout: 3000,
                 async: true
             },
@@ -24,32 +24,32 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-        <img src="img/logo.svg" alt="모두의 국악사전">
+        <a href="./index.html">
+        <img src="./img/logo.svg" alt="모두의 국악사전">
         </a>
-        <img id="menuBtn" src="img/Menu_btn.svg" alt="메뉴바">
-        <img id="exitBtn" class="inactive" src="img/exit_btn.svg" alt="">
+        <img id="menuBtn" src="./img/Menu_btn.svg" alt="메뉴바">
+        <img id="exitBtn" class="inactive" src="./img/exit_btn.svg" alt="">
     </header>
     <main>
         <nav id="menu">
-            <ul>
-                <li><a href="index.html"><h5>국악상점 소개</h5></a></li>
-                <li><a href="section1.html"><h5>전시구역</h5></a></li>
-                <li><a href="headword.html"><h5>표제어 상점</h5></a></li>
-            </ul>
+            <ol>
+                <li><a href="./index.html"><h5>국악상점 소개</h5></a></li>
+                <li><a href="./section1.html"><h5>전시구역</h5></a></li>
+                <li><a href="./headword.html"><h5>표제어 상점</h5></a></li>
+            </ol>
         </nav>
         <section class="titleSection">
             <div class="mainTitle">
                 <div class="titleInner">
-                    <img class="titleImg" src="img/title.svg" alt="">
+                    <img class="titleImg" src="./img/title.svg" alt="">
                     <div class="titleText">
                         <h3>• 국립국악원 국악사전 특별전시 •</h3>
                         <h1>국악상점에 오신 것을 환영합니다!</h1>
                     </div>
-                    <img class="_logoImg" src="img/_logo.svg" alt="">
+                    <img class="_logoImg" src="./img/logoset.svg" alt="">
                     <div class="mainGraphic">
-                        <img src="img/mainGraphic1.svg" alt="">
-                        <img src="img/mainGraphic2.svg" alt="">
+                        <img src="./img/mainGraphic1.svg" alt="">
+                        <img src="./img/mainGraphic2.svg" alt="">
                     </div>
                     <div class="date">
                         <h2>24.11.15 - 12.08</h2>
@@ -63,8 +63,8 @@
             </div>
             <div>
                 <div class="subTitle">
-                    <img class="subTitleImg" src="img/subTitleAsset.svg" alt="">
-                    <h4 class="subTitleText">국악사점이란?</h4>
+                    <img class="subTitleImg" src="./img/subTitleAsset.svg" alt="">
+                    <h4 class="subTitleText">국악사전이란?</h4>
                 </div>
                 <p>
                     2022년 우리 곁을 찾아온 <국악사전>은 우리 전통 음악과 춤에 대한 지식과 사람을 연결하는 열린 매체입니다. 오랜 세월, 국립국악원을 중심으로 축적된 방대한 지식에 학계의 연구 성과가 반영된 최신 정보를 가미해 정확도를 높였습니다. 
@@ -74,8 +74,8 @@
             </div>
             <div>
                 <div class="subTitle">
-                    <img class="subTitleImg" src="img/subTitleAsset.svg" alt="">
-                    <h4 class="subTitleText">국악사점이란?</h4>
+                    <img class="subTitleImg" src="./img/subTitleAsset.svg" alt="">
+                    <h4 class="subTitleText">사전 히스토리</h4>
                 </div>
                 <p>
                     2023년 사전 탈출을 감행했던 국악 표제어들이 2024년에는 세상에서 가장 신명 나는 상점을 엽니다. 2024 <국악사전> 국악사/이론편 오픈 기념 특별 전시 <골라봐요 당신의 국악, 모두의 국악상점>은 국악과 관련된 재미난 상상을 마음껏 펼치고 그를 현실로 구현해 보는 공간입니다. 
@@ -101,13 +101,13 @@
                     </svg>
                     <h4 class="subTitleText blue">섹션 소개</h4>
                 </div>
-                <ul class="sectionList">
+                <ol class="sectionList">
                     <li class="box blueBox">
                         <div class="accordionBox">
                             <h3 class="white">SECTION 1<br>
                                 국악극장: “감동의 휘모리”</h3>
                             <button>
-                                <img src="img/arrow_btn.svg" alt="">
+                                <img src="./img/arrow_btn.svg" alt="">
                             </button>
                         </div>
                         <p class="white">
@@ -123,7 +123,7 @@
                             <h3 class="white">SECTION 2 <br>
                                 국악장터: “영감의 장끼타령”</h3>
                             <button>
-                                <img src="img/arrow_btn.svg" alt="">
+                                <img src="./img/arrow_btn.svg" alt="">
                             </button>
                         </div>
                         <p class="white">
@@ -140,7 +140,7 @@
                             <h3 class="white">SECTION 3<br>
                                 국악상점: “더늠의 시작”</h3>
                             <button>
-                                <img src="img/arrow_btn.svg" alt="">
+                                <img src="./img/arrow_btn.svg" alt="">
                             </button>
                         </div>
                         <p class="white">
@@ -152,14 +152,14 @@
                             즐거운 체험 프로그램과 고퀄리티 굿즈로 내 삶 속의 국악을 완성해보세요.
                         </p>
                     </li>
-                    <a href="section1.html">
+                    <a href="./section1.html">
                     <li class="box blackBox detail">
                             <h6 class="white">
                                 자세히 알아보기
                             </h6>
                     </li>
                     </a>
-                </ul>
+                </ol>
             </div>
         </section>
         <section class="weekSection">
@@ -241,28 +241,28 @@
     <footer>
         <nav>
             <a href="https://www.gugak.go.kr/site/main/index001" target="_blank">
-                <img src="img/gugakLogo.svg" alt="국립국악원">
+                <img src="./img/gugakLogo.svg" alt="국립국악원">
             </a>
             <a href="https://www.gugak.go.kr/ency/" target="_blank">
-                <img src="img/gugakDictionaryLogo.svg" alt="국악사전">
+                <img src="./img/gugakDictionaryLogo.svg" alt="국악사전">
             </a>
         </nav>
         <hr>
         <nav>
             <a href="https://typographyseoul.com/home/" target="_blank">
-                <img src="img/ttSeoulLogo.svg" alt="tt.서울">
+                <img src="./img/ttSeoulLogo.svg" alt="tt.서울">
             </a>
             <a href="https://ddungsang.com/" target="_blank">
-                <img src="img/ddungsangLogo.svg" alt="엉뚱상상">
+                <img src="./img/ddungsangLogo.svg" alt="엉뚱상상">
             </a>
             <a href="https://typographyseoul.com/home/" target="_blank">
-                <img src="img/typographySeoulLogo.svg" alt="Typography Seoul">
+                <img src="./img/typographySeoulLogo.svg" alt="Typography Seoul">
             </a>
         </nav>
         <div class="copyright">
             <p>Copyright©국립국악원. all right reserved</p>
         </div>
     </footer>
-    <script src="main.js"></script>
+    <script src="./main.js"></script>
 </body>
 </html>
