--- a/section1.html
+++ b/section1.html
@@ -9,12 +9,12 @@
     <meta property="og:title" content="모두의 국악상점">
     <meta property="og:image" content="미리보기 섬네일 이미지 주소">
     <meta property="og:description" content="웹사이트를 소개글">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" as="style" crossorigin href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard-dynamic-subset.min.css" />
     <script>
         (function(d) {
             var config = {
-                kitId: 'whs1itl',
+                kitId: 'xoh7uvb',
                 scriptTimeout: 3000,
                 async: true
             },
@@ -24,31 +24,31 @@
 </head>
 <body>
     <header>
-        <a href="index.html">
-            <img src="img/logo.svg" alt="모두의 국악사전">
+        <a href="./index.html">
+            <img src="./img/logo.svg" alt="모두의 국악사전">
         </a>
-        <img id="menuBtn" src="img/Menu_btn.svg" alt="메뉴바">
-        <img id="exitBtn" class="inactive" src="img/exit_btn.svg" alt="">
+        <img id="menuBtn" src="./img/Menu_btn.svg" alt="메뉴바">
+        <img id="exitBtn" class="inactive" src="./img/exit_btn.svg" alt="">
     </header>
     <main>
         <nav id="menu">
-            <ul>
-                <li><a href="index.html"><h5>국악상점 소개</h5></a></li>
-                <li><a href="section1.html"><h5>전시구역</h5></a></li>
-                <li><a href="headword.html"><h5>표제어 상점</h5></a></li>
-            </ul>
+            <ol>
+                <li><a href="./index.html"><h5>국악상점 소개</h5></a></li>
+                <li><a href="./section1.html"><h5>전시구역</h5></a></li>
+                <li><a href="./headword.html"><h5>표제어 상점</h5></a></li>
+            </ol>
         </nav>
         <section class="exhibitionSection">
             <table class="exhibitionArea">
                 <tr>
-                    <th class="blueBox"><a href="section1.html"><h6>Seciton 1</h6></a></th>
-                    <th><a href="section2.html"><h6>Seciton 2</h6></a></th>
-                    <th><a href="section3.html"><h6>Seciton 3</h6></a></th>
+                    <th class="blueBox"><a href="./section1.html"><h6>Seciton 1</h6></a></th>
+                    <th><a href="./section2.html"><h6>Seciton 2</h6></a></th>
+                    <th><a href="./section3.html"><h6>Seciton 3</h6></a></th>
                 </tr>
             </table>
             <h2 class="gray">국악극장: “감동의 휘모리” <br> <국악사전> 다큐멘터리 필름</h2>
             <hr>
-            <img src="img/section01.svg" alt="section 1 구조도">
+            <img src="./img/section01.svg" alt="section 1 구조도">
             <p>
                 관에서 의례 진행하는 아카이빙 사업과는 달리 <국악사전>은 국악의 살아 숨 쉬는 역사가 담긴 국악 용어들이 책이나 사전 속의 말이 아닌, 
                 동시대에서도 살아 숨 쉬며 시민들과 함께 호흡하는 현장의 말로서 존재하고 기능하기를 바랐습니다. 
