--- a/section3.html
+++ b/section3.html
@@ -14,7 +14,7 @@
     <script>
         (function(d) {
             var config = {
-                kitId: 'whs1itl',
+                kitId: 'xoh7uvb',
                 scriptTimeout: 3000,
                 async: true
             },
@@ -32,11 +32,11 @@
     </header>
     <main>
         <nav id="menu">
-            <ul>
+            <ol>
                 <li><a href="index.html"><h5>국악상점 소개</h5></a></li>
                 <li><a href="section1.html"><h5>전시구역</h5></a></li>
                 <li><a href="headword.html"><h5>표제어 상점</h5></a></li>
-            </ul>
+            </ol>
         </nav>
         <section class="exhibitionSection">
             <table class="exhibitionArea">
